Fix deprecated function calls.